force-app/main/default/objects/Merchandise__c/Merchandise__c.object-meta.xml
<CustomObject>
    <description>to buy the stock from market</description>
    <label>Merchandise</label>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>