force-app/main/default/objects/Merchandise__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>Texas</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
            <value>
                <fullName>Kyoto</fullName>
            </value>
            <value>
                <fullName>okinawa</fullName>
            </value>
            <value>
                <fullName>seoul</fullName>
            </value>
            <value>
                <fullName>busan</fullName>
            </value>
            <value>
                <fullName>gangnam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>