force-app/main/default/objects/Merchandise__c/fields/unique_id__c.field-meta.xml
<CustomField>
    <fullName>unique_id__c</fullName>
    <label>unique id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>