force-app/main/default/objects/Merchandise__c/recordTypes/mwithctry.recordType-meta.xml
<RecordType>
    <fullName>mwithctry</fullName>
    <active>true</active>
    <label>mwithctry</label>
</RecordType>