force-app/main/default/objects/Merchandise__c/recordTypes/mwithoutctry.recordType-meta.xml
<RecordType>
    <fullName>mwithoutctry</fullName>
    <active>true</active>
    <label>mwithoutctry</label>
</RecordType>