force-app/main/default/objects/Merchandise__c/listViews/admin_queue_Merchandise.listView-meta.xml
<ListView>
    <fullName>admin_queue_Merchandise</fullName>
    <filterScope>Queue</filterScope>
    <label>admin queue</label>
    <queue>admin_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>